--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
                                 <span class="text">Portfolio. Pierwsza stworzona strona.</span>
                                 <div class="img img-1b"></div>
                                 <div class="sm">
-                                    <a class="live" href="http://www.jdsolutions.pl" target="_blank"><i
+                                    <a class="live" href="http://www.jdsolutions.netlify.app" target="_blank"><i
                                             class="fas fa-globe"></i></a>
-                                    <a class="github" href="https://github.com/Moriarx?tab=projects" target="_blank"><i
+                                    <a class="github" href="https://github.com/Moriarx/Portfolio" target="_blank"><i
                                             class="fas fa-code-branch"></i></a>
                                 </div>
                             </div>
