fixed css issues

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 
     <script src="https://kit.fontawesome.com/164add3b85.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/Kurs cz 2/css/animate.css">
-    <link rel="stylesheet" href="/Kurs cz 2/Portfolio/sass/main.css">
-    <link rel="stylesheet" media="screen and (min-width: 576px)" href="/Kurs cz 2/Portfolio/sass/small.css">
-    <link rel="stylesheet" media="screen and (min-width: 768px)" href="/Kurs cz 2/Portfolio/sass/medium.css">
-    <link rel="stylesheet" media="screen and (min-width: 992px)" href="/Kurs cz 2/Portfolio/sass/large.css">
+    <link rel="stylesheet" href="./sass/animate.css">
+    <link rel="stylesheet" href="./sass/main.css">
+    <link rel="stylesheet" media="screen and (min-width: 576px)" href="./sass/small.css">
+    <link rel="stylesheet" media="screen and (min-width: 768px)" href=".//sass/medium.css">
+    <link rel="stylesheet" media="screen and (min-width: 992px)" href="./sass/large.css">
 
 </head>
 
@@ -93,7 +93,7 @@
                                 <span class="text">Aplikacja generująca losowe hasło.</span>
                                 <div class="img img-2b"></div>
                                 <div class="sm">
-                                    <a class="live" href="jdsolutionspassgen.netlify.app" target="_blank"><i
+                                    <a class="live" href="https://jdsolutionspassgen.netlify.app/" target="_blank"><i
                                             class="fas fa-globe"></i></a>
                                     <a class="github" href="https://github.com/Moriarx/PasswordGenerator" target="_blank"><i
                                             class="fas fa-code-branch"></i></a>
@@ -114,7 +114,7 @@
                                 <span class="text">Aplikacja pozwalająca generować, edytować, usuwać zadania, które zapisują się po zamknięciu strony.</span>
                                 <div class="img img-3b"></div>
                                 <div class="sm">
-                                    <a class="live" href="jdsolutionstodolist.netlify.app" target="_blank"><i
+                                    <a class="live" href="https://jdsolutionstodolist.netlify.app" target="_blank"><i
                                             class="fas fa-globe"></i></a>
                                     <a class="github" href="https://github.com/Moriarx/ToDo-list" target="_blank"><i
                                             class="fas fa-code-branch"></i></a>
@@ -135,7 +135,7 @@
                                 <span class="text">Strona salonu barbera oparta o flexbox. Posiada kalendarz wizyt umożliwiający zapisy na konkretne terminy. Strona w budowie.</span>
                                 <div class="img img-4b"></div>
                                 <div class="sm">
-                                    <a class="live" href="jdsolutionsbarber.netlify.app" target="_blank"><i
+                                    <a class="live" href="https://jdsolutionsbarber.netlify.app" target="_blank"><i
                                             class="fas fa-globe"></i></a>
                                     <a class="github" href="https://github.com/Moriarx/Barber" target="_blank"><i
                                             class="fas fa-code-branch"></i></a>
