--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./sass/animate.css">
     <link rel="stylesheet" href="./sass/main.css">
     <link rel="stylesheet" media="screen and (min-width: 576px)" href="./sass/small.css">
-    <link rel="stylesheet" media="screen and (min-width: 768px)" href=".//sass/medium.css">
+    <link rel="stylesheet" media="screen and (min-width: 768px)" href="./sass/medium.css">
     <link rel="stylesheet" media="screen and (min-width: 992px)" href="./sass/large.css">
 
 </head>
@@ -264,7 +264,7 @@
                     <div class="contacts-item.col-sm-12 col-lg-6 order-0">
                         <h3>social media</h3>
                         <div class="social-media">
-                            <a class="github" target="_blank" href="https://github.com/Moriarx?tab=projects"><i
+                            <a class="github" target="_blank" href="https://github.com/Moriarx"><i
                                     class="fab fa-github"></i></a>
                             <a class="linkedin" target="_blank"
                                 href="https://www.linkedin.com/in/jan-dziennik-1b265a17b/"><i
@@ -288,9 +288,9 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
         integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
     </script>
-    <script src="/Kurs cz 2/Portfolio/js/animation.js"></script>
-    <script src="/Kurs cz 2/Portfolio/js/jquery.waypoints.min"></script>
-    <script src="/Kurs cz 2/Portfolio/js/main.js"></script>
+    <script src="./js/animation.js"></script>
+    <script src="./js/jquery.waypoints.min"></script>
+    <script src="./js/main.js"></script>
 </body>
 
 </html>
