--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         </div>
                         <div class="back">
                             <div class="back-content middle">
-                                <span class="text">Portfolio. Pierwsza stworzona strona.</span>
+                                <span class="text">Portfolio.<br> Pierwsza stworzona strona.</span>
                                 <div class="img img-1b"></div>
                                 <div class="sm">
                                     <a class="live" href="http://www.jdsolutions.netlify.app" target="_blank"><i
@@ -219,7 +219,7 @@
         </section> -->
         <section id="technologies" class="scroll-fix">
             <div class="jumbotron jumbotron-fluid">
-                <h2>technologie, których używam</h2>
+                <h2>używane technologie</h2>
                 <div class="underline"></div>
                 <div class="wrapper row tech-list">
                     <div class="col-md-6 col-lg-4 col-xl-2 tech">
@@ -259,7 +259,7 @@
                 <div class="wrapper row text-center contact-me">
                     <div class="contact-item.col-sm-6 col-lg-6 order-1">
                         <h3>e-mail</h3>
-                        <p>jdsolutions.work@gmail.com</p>
+                        <a href="mailto:email"><p>jdsolutions.work@gmail.com</p></a>
                     </div>
                     <div class="contacts-item.col-sm-12 col-lg-6 order-0">
                         <h3>social media</h3>
