--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                         <div class="front">
                             <div class="img img-3f">
                                 <div class="bg">
-                                    <h2>Zaawansowana ToDo Lista</h2>
+                                    <h2>Zaawansowana ToDo Lista (under development)</h2>
                                 </div>
                             </div>
                         </div>
@@ -126,7 +126,7 @@
                         <div class="front">
                             <div class="img img-4f">
                                 <div class="bg">
-                                    <h2>barber shop</h2>
+                                    <h2>barber shop (under development)</h2>
                                 </div>
                             </div>
                         </div>
