--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="card middle">
+                    <!--<div class="card middle">
                         <div class="front">
                             <div class="img img-3f">
                                 <div class="bg">
@@ -121,7 +121,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div>-->
                     <div class="card middle">
                         <div class="front">
                             <div class="img img-4f">
